wider to prevent wrap

--- a/europoll.css
+++ b/europoll.css
@@ -14,7 +14,7 @@ changed to a eurovision logo blue
 */
 .custom {
 	background: #0f4476;
-	width: 300px;
+	width: 400px;
 	transition: opacity 1s;
 	padding: 2px;
 
